@@ -1,0 +1,10 @@
+<?xml version="1.0" encoding="UTF-8"?>
+<mime-info xmlns="http://www.freedesktop.org/standards/shared-mime-info">
+   <mime-type type="application/x-adf">
+     <comment>Amiga Disk File</comment>
+     <magic priority="50">
+       <match value="UAE--ADF" type="string" offset="0:8"/>
+     </magic>
+     <glob pattern="*.adf"/>
+   </mime-type>
+</mime-info>
